--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ body
     transition: background-color 0.25s ease, color 0.25s ease;
 }
 a {
+  padding: 3px;
+  margin: -3px;
   text-decoration: none;
   font-size: 1.2em;
   color: #ffffff;
@@ -27,6 +29,8 @@ body.dark-mode {
     background-color: #333;
     color: #ffffff;
 }
+
+
 
 header
 {
@@ -156,5 +160,22 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+.tab-content {
+  display: none; /* Hide all tab content by default */
+}
 
+.tab-content.active {
+  display: block; /* Show the active tab content */
+}
 
+.tab-button {
+  padding: 10px 15px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  background-color: #f0f0f0;
+}
+
+.tab-button.active {
+  background-color: #e0e0e0;
+  border-bottom: none;
+}
